--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ layout: default
         302</p>
     </div>
 </div>
-<div class="row">
+<!-- <div class="row">
     <div class="col-xm-12 col-sm-12 col-md-12 col-lg-12 text-center">
         <blockquote>
             “We know it’s not traditional<br/>
@@ -75,7 +75,7 @@ layout: default
             We would most appreciate”<br/>
         </blockquote>
     </div>
-</div>
+</div> -->
 <!-- <div class="row">
     <div class="col-xm-12 col-sm-12 col-md-12 col-lg-12 text-center">
         <h3>TownePlace Suites</h3>
